--- a/src/main/resources/com/c195/language/login_fr.properties
+++ b/src/main/resources/com/c195/language/login_fr.properties
@@ -18,7 +18,7 @@ Incorrect=identifiant ou mot de passe incorrect
 User=Nom d'utilisateur
 
 Password=Mot de passe
-Language=Langue
+Language=Francais
 English=Anglais
 French=Francais
 Location=Emplacement
